# Triale

./: CONTRIBUTING.md  Cargo.toml  README.md  SECURITY.md
src/: errors.rs  geometry.rs  io.rs  main.rs  point.rs  triangle.rs
