[package]
name = "triale"
version = "0.1.0"
edition = "2024"
description = "A fast and over engineered triangle information calculator"
license = "MIT"
readme = "README.md"
repository = "https://devmcsam/triale"
keywords = ["math", "trigonometry", "geometry"]
categories = ["game-development", "mathematics", "science", "science::geo"]

[dependencies]

[profile.release]
opt-level = 3
lto = "fat"
incremental = false
codegen-units = 1
debug = false
debug-assertions = false
overflow-checks = false
panic = "abort"
strip = "symbols"

[profile.dev]
opt-level = 0
lto = false
incremental = true
codegen-units = 16
debug = true
debug-assertions = true
overflow-checks = true
panic = "unwind"
strip = false